--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
                     <div class="carousel-inner ml-auto" >
                         <div class="carousel-item active ">
-                            <div class="gallery " style="margin-left:12.5%">
+                            <div class="gallery " style="margin-left:auto; justify-content:center">
                                 <div class="parallelogram">
                                     <img src="Templetes/Characters/characters_01.jpg" alt="Image 1" class="image">
                                     <div class="overlay-text">
@@ -379,7 +379,7 @@
                         </div>
                         
                         <div class="carousel-item">
-                            <div class="gallery" style="margin-left:12.5%">
+                            <div class="gallery" style="margin-left:auto; justify-content:center">
                                 <div class="parallelogram">
                                     <img src="Templetes/Characters/characters_07.jpg" alt="Image 7" class="image">
                                     <div class="overlay-text">
